app/assets/stylesheets/admin/admin.css.scss
// Quick dirty rules to improve layout of admin pages

div.input.string,
div.input.select,
div.input.decimal,
div.input.tel,
div.input.boolean,
div.input.text,
div.input.file,
div.input.email,
div.input.password,
// div.input.check_boxes,
div.input.integer {
  margin-top: 10px;

  label {
    float: left;
    width: 150px;
  }
  label.boolean {
    float: none;
    margin-left: 160px;
    input {
      margin-right: 5px;
    }
  }
  input[type=text],
  input[type=tel],
  input[type=number],
  input[type=file] {
    width: 200px;
    margin: 0 10px;
  }
  textarea {
    width: 320px;
    height: 70px;
    margin: 0 10px;
  }
  select {
    margin: 0 10px;
    max-width: 400px;
  }
}

div.input.court_info {
  label {
    float: none;
  }
}

form .form-actions {
  margin-top: 1em;
  padding: 10px 30px;
  background: #eee;
}

#user-notice {
  padding: 10px 30px;
  background: #eee;
}

.destroy {
  margin: 5px 0 0 160px;
  font-size: 1.6rem;

  .undo,
  input,
  label {
    display: none;
  }
}

.field-group {
  float: right;
}

.destroy .ui-icon {
  float: left;
  margin: 3px 3px 0 0;
}

.sortable {
  padding: 0;
  list-style: none;

  .sortable-summary {
    display: none;
    cursor: move;
    background: #eee;
    border: 1px solid #ccc;
  }

  .ui-icon {
    float: left;
    margin-top: 2px;
  }

  .ui-state-highlight {
  }

  li {
    min-height: 1em;
    margin: 0 0 3px 0;
    padding: 0;
    font-size: 1.6rem;
  }
}
.js-enabled .sortable {
    [class*="sort"] {
      display: none;
    }
}
.admin-only {
  display: none;
}

